please check the product page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
       <h2>TakeATrip</h2>
       <ul>
-          <li><a href="#"><span class="circle">DISCOVER</span></a></li>
+          <li><a href="#"><span class="circle" id="discover">DISCOVER</span></a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">LOCATION</a></li>
           <li><a href="#">REVIEW</a></li>
