added css to landing page and admin page

--- a/topUser.html
+++ b/topUser.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/topUser.css">
 </head>
 <body>
+    <div class="cont">
     <div class="user">
         
     </div>
+    <h3 id="top-picks-text">Their top picks:</h3>
     <div class="trips">
 
     </div>
+</div>
     <script src="/scripts/topUser.js"></script>
 </body>
 </html>
