update in product page

--- a/product.html
+++ b/product.html
@@ -6,9 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TakeATrip</title>
     <link rel="stylesheet" href="./styles/product.css">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-
+  <!-- navbar -->
+  <nav>
+   
+    <h2 id="takea">TakeATrip</h2>
+    <ul>
+        <li><a href="#"><span class="circle" id="discover">DISCOVER</span></a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">LOCATION</a></li>
+        <li><a href="#">REVIEW</a></li>
+    </ul>
+    <div id="myLinks">
+        
+        <button class="menu-btn">&#9776;</button>
+        <div class="burgerMenu">
+            <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        <p class="cross">&#9587</p>
+        </div>
+          </a>
+      </div>
+ </nav>
   <div class="nav1">
     <div class="nav2">
         <div class="logo1">
@@ -43,4 +65,5 @@
     
 </body>
 <script src="./scripts/product.js"></script>
+<script src="./scripts/index.js"></script>
 </html>
