--- a/login_page/otp.html
+++ b/login_page/otp.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>OTP Verification Form</title>
     <link rel="stylesheet" href="otp.css" />
+    <link rel="stylesheet" href="/styles/common.css" />
     <!-- Boxicons CSS -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
    
@@ -24,9 +25,19 @@
           <input type="number" disabled />
           <input type="number" disabled />
         </div>
-        <button>Verify OTP</button>
+        <button id="verifyOtp">Verify OTP</button>
       </form>
     </div>
-    <script src="otp.js"></script>
+
+        <!-- pop up -->
+        <div class="popup" id="otpPopup">
+          <div class="popup-content">
+            <p id="otpPopupText"></p>
+            <button class="close-btn">Close</button>
+          </div>
+        </div>
+        <!-- pop up -->
+    <script type="module" src="otp.js"></script>
+    <script type="module" src="/scripts/common.js"></script>
   </body>
 </html>
