--- a/login_page/otp.html
+++ b/login_page/otp.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>OTP Verification Form</title>
     <link rel="stylesheet" href="otp.css" />
-    <link rel="stylesheet" href="/styles/common.css" />
+    <!-- <link rel="stylesheet" href="/styles/common.css" /> -->
     <!-- Boxicons CSS -->
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
    
