individual page is added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h2>TakeATrip</h2>
         </div>
         <div>
-            <a href="#"><span class="circle">DISCOVER</span></a>
+            <a href="./product.html"><span class="circle">DISCOVER</span></a>
             <a href="#">ABOUT</a>
            <a href="#">LOCATION</a>
             <a href="#">REVIEW</a>
