css is also working fine

--- a/product.html
+++ b/product.html
@@ -38,12 +38,11 @@
             <h2 id="title">TakeATrip</h2>
             
         </div>
-        <div>
+        <div class="des" >
             <label for="">Destination</label>
-
-            <input type="text" name="" id="destination">
+ <input type="text" name="" id="destination">
         </div>
-       <div>
+       <div class="des">
         <label for="">Desparture city</label>
         <input type="text" name="" id="departure">
        </div>
