fixed login, search in home page and added id to discovery

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div>
 
-            <a href="./product.html"><span class="circle">DISCOVER</span></a>
+            <a href="./product.html" id="discover"><span class="circle">DISCOVER</span></a>
 
             <a href="#">ABOUT</a>
            <a href="#">LOCATION</a>
