--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./styles/product.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
          <!-- navbar -->
