--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="burgerMenu dropdown-content">
 <!-- added these two  -->
                 <a href="#" id="account" style="display:none"> My Account</a>
-                <a href="#" id="cart" style="display:none"> My Cart</a>
+                <a href="./CartPage.html" id="cart" style="display:none"> My Cart</a>
             <a href="" id="Shimla">Shimla</a>
             <a href="" id="Ooty">Ooty</a>
             <a href="" id="Maldives">Maldives</a>
