fixed some styles

--- a/product.html
+++ b/product.html
@@ -75,7 +75,7 @@
     <div class="container" >
     </div>
     <div class="pagination-container"></div>
-    <footer>
+    <footer id="footer">
       <div class="container1">
           <div class="sec" id="sec-btns">
               <h2>TakeATrip</h2>
@@ -130,7 +130,7 @@
       </div>
    
   </footer>
-  <div class="line-break">
+  <div class="line-break" id="line-break">
     <hr>
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
