--- a/CartPage.html
+++ b/CartPage.html
@@ -716,6 +716,11 @@ discover.addEventListener("click",function(){
     window.location.href="product.html"
 })
 
+
+document.querySelector(".proceed-to-checkout").addEventListener("click", () => {
+        window.location.href = "./Completed_Pages/MakePayment.html";
+    })
+
 </script>
 
 </html>
