--- a/individual.html
+++ b/individual.html
@@ -263,10 +263,11 @@
         .images {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-evenly;
+            justify-content:flex-start;
             /* align-items: center; */
             text-align: center;
-
+            gap:10px;
+            margin-left: 15px;
         }
 
         .cont2 h2,
@@ -276,8 +277,8 @@
         }
 
         .images img {
-            width: 400px;
-            height: 400px;
+            width: 120px;
+            height: 120px;
         }
 
         #book {
