--- a/product.html
+++ b/product.html
@@ -14,11 +14,11 @@
          <!-- navbar -->
          <nav>
           <div>
-          <h2 onclick="window.location.href='index.html';">TakeATrip</h2>
+          <h2 onclick="window.location.href='index.html';" id="title">TakeATrip</h2>
       </div>
       <div>
 
-          <a href="./product.html"><span class="circle">DISCOVER</span></a>
+          <a href="./product.html"><span class="circle" id="discover">DISCOVER</span></a>
 
           <a href="#">ABOUT</a>
          <a href="#">LOCATION</a>
