fixed some styling and added loaders

--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TakeATrip</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="./styles/product.css">
+    <link rel="stylesheet" href="./styles/product.css">-
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="">
 </head>
@@ -45,6 +45,7 @@
         </div>
       </div>
    </nav>
+   <div id="loader"></div>
   <div class="nav1">
     <div class="nav2">
         <div class="logo1">
@@ -64,7 +65,7 @@
        <button id="Search">Search</button>
     </div>
   </div>
-  <div id="loader"></div>
+  
   <div class="filter">
     <h1 id="total-count"></h1>
     <p id="pop">Price <button id="popup" class="hide">↑ </button> <button id="popdon" class="hide">↓</button></p>
@@ -81,8 +82,8 @@
               <h2>TakeATrip</h2>
       <p>Subscribe to our newsletter to get more informations</p>
       <div id="log-div">
-          <button id="b1">LOGIN</button>
-          <button id="b2">SIGN UP</button>
+          <!-- <button id="b1">LOGIN</button>
+          <button id="b2">SIGN UP</button> -->
           <button id="c1" display="none">LOGOUT</button>
       </div>
       <div>
