--- a/product.html
+++ b/product.html
@@ -30,8 +30,8 @@
           <button class="menu-btn dropbtn">&#9776;</button>
           <div class="burgerMenu dropdown-content">
 <!-- added these two  -->
-              <a href="#" id="account" style="display:none"> My Account</a>
-              <a href="#" id="cart" style="display:none"> My Cart</a>
+              <a href="#" id="account"> My Account</a>
+              <a href="#" id="cart"> My Cart</a>
           <a href="" id="Shimla">Shimla</a>
           <a href="" id="Ooty">Ooty</a>
           <a href="" id="Maldives">Maldives</a>
@@ -58,7 +58,7 @@
  <input type="text" name="" id="destination">
         </div>
        <div class="des">
-        <label for="">Desparture city</label>
+        <label for="">Departure city</label>
         <input type="text" name="" id="departure">
        </div>
 
